# TerraF

./: .replit  CONTRIBUTING.md  README-monorepo.md  README.md  agent_base.py  agent_demo_ui.py  agent_orchestration_ui.py  agent_readiness_analyzer.py  ai_integration_agent.py  app.py  app_enhancement.py  auth_manager.py  auto_folder_md_reports.py  batch_pr_generator.py  bridge.py  code_analyzer.py  code_pattern_recognizer.py  combined_app.py  components.py  continuous_learning.py  database_analyzer.py  database_migration_agent.py  design_system.py  documentation_agent.py  domain_knowledge_agent.py  domain_knowledge_ui.py  generate_test_reports.py  integration_test_agent.py  login_page.py  model_interface.py  modularization_analyzer.py  multi_model_interface.py  package-lock.json  package.json  pattern_recognition_ui.py  phase_manager.py  pnpm-workspace.yaml  pyproject.toml  report_generator.py  repository_handler.py  (+25 more)
.streamlit/: config.toml
attached_assets/: AI-Prompts.md  Pasted--Copy-that-Commander-From-now-on-I-lead-you-drive-No-theory-No-distractions-Just--1745778711799.txt  Pasted--Full-greenlight-received-Commander-Proceed-Attach-MCP-Core-confirmed-We-are-now-cros-1745783825011.txt  Pasted--Replit-AI-Agent-Bootstrap-Sprint-0-End-to-End-PoC-for-TerraFusionPlayground-You-are-the-Repl-1745711846123.txt  Pasted--YES-Tactical-Operations-Continuing-Now-that-we-have-Phase-Persistence-stabilized--1745780375421.txt  Pasted--terraflow-enhanced-refactored-Sync-Service-Dashboard-Code-Analysis-Dashboard-Agent-Orchestratio-1746572326059.txt  (+3 more)
auth/: sessions.json  users.json
(+85 files in other folders)
